[tool.poetry]
name = "drones_api"
version = "0.1.0"
description = "Dron Transportation Infrastructure API"
authors = ["Reinier Hernández <sasuke.reinier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
Pillow = "^9.2"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.5"
black = "^22.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
